# safefetch

./: README.md  pyproject.toml
safehttpx/: __init__.py
test/: test.py
