[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safefetch"
version = "0.1.0"
description = "A Python package for replicating Gradio applications"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
]

[project.urls]
homepage = "https://github.com/gradio-app/safefetch"
repository = "https://github.com/gradio-app/safefetch"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["safefetch"]

