[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "safehttpx"
version = "0.1.1"
description = "A small Python library created to help developers protect their applications from Server Side Request Forgery (SSRF) attacks."
authors = [
    { name = "Abubakar Abid", email = "abubakar@hf.co" }
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx",
]

[project.urls]
homepage = "https://github.com/gradio-app/safehttpx"
repository = "https://github.com/gradio-app/safehttpx"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["safehttpx"]

